Add sanction check on login